--- a/styles.css
+++ b/styles.css
@@ -614,7 +614,6 @@ li {
     right: 18%;
     top: 8%;
     color: white;
-    /* left: 10%; */
     z-index: 1;
 }
 
@@ -623,7 +622,6 @@ li {
     right: 15%;
     top: 3%;
     color: white;
-    /* left: 10%; */
     z-index: 1;
 }
 
@@ -694,4 +692,14 @@ hr {
     padding: 20px 10%;
     font-family: "Poppins", sans-serif;
     width: 80%;
+}
+
+
+/* responsiveness */
+
+@media (max-width:579px) {
+    section2{
+        width: 100%;
+        flex-wrap: wrap;
+    }
 }
