--- a/styles.css
+++ b/styles.css
@@ -701,6 +701,10 @@ hr {
     nav{
         flex-wrap: wrap;
     }
+    nav .card1{
+        display: flex;
+        flex-direction: column;
+    }
     section2{
         width: 100%;
         flex-wrap: wrap;
